# steven-opengl-starter-kit-in-vscode

./: CMakeLists.txt  main.cpp  test.cpp
resources/shaders/: core.frag  core.vs
src/: Shader.h  main.cpp
